# site

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AGENTS.md  AGENT_TESTING.md  CHANGELOG.md  Cargo.toml  GEMINI.md  IMPROVEMENTS_PLAN.md  LICENSE  MPFD_REFACTOR_PLAN.md  Makefile  PLAN-dataset-associations.md  README.md  TAILWIND_MAPPING.md  build.mk  deno.json  fresh.config.ts  mod-add  mods.load  package.json  serve.allow  start.sh  tailwind.config.js  test_minimal.c
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: CODEBASE.md
htdocs/: app.js  bud-client.js  bud-hydrate.js  styles.css
lib/: module-router.tsx
lib/transp/: mod.ts  test_debug.c  transp.c
mods/auth/: ConfirmUI.tsx  Login.tsx  Makefile  README.md  Register.tsx  auth.c  auth.h  index.tsx  mod.json  ssr.rs  test.sh
mods/auth/routes/: login.tsx  register.tsx
mods/auth/ssr/: index.tsx
mods/auth/ssr/components/: ConfirmUI.tsx  Login.tsx  Register.tsx
mods/auth/ux/: all.c  login.c  register.c
mods/bud_demo/: Makefile  bud_demo.c  test_patch.c
mods/bud_demo/ux/: bud_demo_fe.c
mods/choir/: Makefile  README.md  choir.c  choir.h  fields.h  index.tsx  repertoire.h  repertoire_impl.inc  ssr.rs  test.sh
mods/choir/routes/: [id].tsx
mods/choir/routes/[id]/: delete.tsx  edit.tsx
mods/choir/ssr/: Cargo.toml  index.tsx  render_ffi.rs
mods/choir/ssr/src/: main.rs
mods/choir/ux/: add.c  all.c  detail.c  edit.c
mods/chords/: Makefile  README.md  chords.c  test.sh  test_integration.sh
mods/chords/lib/transp/: Makefile  README.md
mods/chords/ssr/: index.tsx
mods/common/: Makefile  README.md  common.c  common.h  common_dataset.c  common_encoding.c  common_form.c  common_internal.h  common_item_json.c  common_json.c  common_mpfd.c  common_post.c  common_response.c  common_storage.c  common_strlist.c  field_macros.h  mod.json  test_dataset.c  test_ui_fe
mods/common/ux/: site_ui.c  site_ui.h
mods/confirm/: confirm.c  mod.json
mods/core/: core.c
mods/index/: IndexAdd.tsx  IndexDelete.tsx  IndexList.tsx  Makefile  index.c  index.h  ssr.rs
mods/index/ux/: all.c  home.c  list.c
mods/index_api/: index_api.c  mod.json  test.sh
mods/login/: Makefile  login.c  login.h  mod.json
mods/logout/: logout.c  mod.json
mods/mpfd/: Makefile  README.md  mod.json  mpfd.c  mpfd.h  test.sh
mods/ndc-types/: Cargo.toml
mods/ndc-types/src/: lib.rs  paths.rs  utils.rs
mods/poem/: Makefile  PoemAdd.tsx  PoemDetail.tsx  PoemList.tsx  README.md  fields.h  index.tsx  mod.json  poem.c  ssr.rs  test.sh
mods/poem/islands/: PoemView.tsx
mods/poem/routes/: [id].tsx  add.tsx  index.tsx
mods/poem/ssr/: Cargo.toml  index.tsx  render_ffi.rs  ui.tsx
mods/poem/ssr/components/: PoemAdd.tsx  PoemDetail.tsx  PoemList.tsx
mods/poem/ssr/src/: main.rs
mods/poem/ux/: all.c  detail.c  form.c
mods/proxy/: proxy.c  proxy.h
mods/redir/: redir.c  test.sh
mods/register/: mod.json  register.c
mods/sb/: README.md  sb.c
mods/sb/ssr/: index.tsx
mods/song/: .ChordDetail.tsx.swp  ChordAdd.tsx  ChordDetail.tsx  ChordList.tsx  Makefile  README.md  fields.h  index.tsx  song.c  song.h  ssr.rs  test.sh
mods/song/(_islands)/: TransposeForm.tsx
mods/song/client/: Cargo.toml  Makefile
mods/song/client/src/: lib.rs
mods/song/islands/: SongView.tsx  TransposeControls.tsx
mods/song/ndc_song_shared/: Cargo.toml
mods/song/ndc_song_shared/src/: lib.rs
mods/song/routes/: [id].tsx  add.tsx  index.tsx
mods/song/ssr/: Cargo.toml  index.tsx  render_ffi.rs
mods/song/ux/: all.c  form.c  shared.c
mods/songbook/: Makefile  README.md  fields.h  index.tsx  songbook.c  ssr.rs  test.sh
mods/songbook/client/: Cargo.toml  Makefile
mods/songbook/client/src/: lib.rs
mods/songbook/islands/: SongItem.tsx  SongbookEditRow.tsx
mods/songbook/routes/: .index.tsx.swp  [id].tsx  add.tsx
mods/songbook/ssr/: Cargo.toml  render_ffi.rs
mods/songbook/ux/: add.c  all.c  detail.c  edit.c  shared.c
mods/source/: Makefile  source-http.c  source.c  source.h
mods/ssr/: Cargo.toml  Makefile  README.md  build.rs  cbindgen.toml  input.css  keys.ts  mod.json  server.ts  server.tsx  ssr.c  ssr.h  ssr_ffi.h  ssr_item_types.h  test.sh  ui.tsx
mods/ssr/ndc_dioxus_shared/: Cargo.toml
mods/ssr/ndc_dioxus_shared/src/: blueprint.rs  hyle_ssr.rs  lib.rs
mods/ssr/rust-renderer/: Cargo.toml  build.rs  cbindgen.toml
mods/ssr/rust-renderer/src/: lib.rs  shared.rs
mods/ssr/src/: blueprint.rs  ctypes.rs  hyle_ssr.rs  lib.rs  shared.rs  site_ui.rs  source_query.rs
mods/ssr/src/api/: dataset.rs
mods/ssr/src/ffi/: dataset.rs
mods/unified-client/: Cargo.toml  Makefile
mods/unified-client/src/: lib.rs
mods/welcome/: mod.json  welcome.c
other/mods/static/: static.c
routes/: [...slug].tsx  _app.tsx  _middleware.ts  index.tsx
scripts/: dev-server.ts  gen_mods.py  migrate-owner-files.sh  mod_add  setup-routes.ts  watch-bundle.ts  watch.sh
src/core/: main.c
src/htpasswd/: htpasswd
tests/e2e/: a11y.test.ts  auth-logout.test.ts  auth-register.test.ts  bud-demo.test.ts  bud-hydration.test.ts  choir-create.test.ts  choir-delete.test.ts  choir-ownership.test.ts  choir-repertoire-manage.test.ts  choir-songbook-flow.test.ts  choir-songbooks.test.ts  csrf-stability.test.ts  dataset-api-write.test.ts  dioxus-mount.test.ts  index-add-button.test.ts  login-ret.test.ts  poem-add.test.ts  poem-delete.test.ts  poem-edit.test.ts  poem-ownership.test.ts  redir.test.ts  song-add.test.ts  song-delete.test.ts  song-detail-transpose.test.ts  song-detail-ui.test.ts  song-edit.test.ts  song-initial-paginate.test.ts  song-list.test.ts  song-media.test.ts  song-ownership.test.ts  song-prefs.test.ts  song-ssr-chords.test.ts  song-ssr-filter.test.ts  song-type.test.ts  song-validation.test.ts  songbook-add-row-bug.test.ts  songbook-delete.test.ts  songbook-edit-row.test.ts  songbook-edit.test.ts  songbook-ownership.test.ts  (+5 more)
tests/e2e/helpers/: auth.ts  debug.ts
tests/integration/: 01-auth-poem-flow.sh  02-poem-listing-update.sh  03-generic-json.sh  run_all.sh
tests/pages/: 00-helpers.sh  10-pages-render.sh
(+18 files in other folders)
