[workspace]
resolver = "3"
members = [
    "mods/ssr/ndc_dioxus_shared",
    "mods/ssr/rust-renderer",
    "mods/unified-client",
    "mods/song/ssr",
    "mods/poem/ssr",
    "mods/choir/ssr",
    "mods/songbook/ssr",
]

exclude = [
    "mods/song/client",
    "mods/poem/client",
    "mods/choir/client",
    "mods/songbook/client",
]

[workspace.dependencies]
dioxus             = "0.7.7"
dioxus-ssr         = "0.7.7"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
url                = "2.5"
indexmap           = { version = "2", features = ["serde"] }
hyle               = { version = "0.1.2" }
hyle-dioxus        = { version = "0.1.2" }
hyle-dioxus-native = { version = "0.1.2" }
