[workspace]
resolver = "3"
members = [
    "mods/ssr/ndc_dioxus_shared",
    "mods/song/ndc_song_shared",
    "mods/ssr",
    "mods/ndc-types",
    "external/libqmap/rust-bindings",
]

exclude = [
    "mods/song/client",
]

[workspace.package]
edition = "2024"
version = "0.1.7"
license = "BSD-2-Clause"
repository = "https://github.com/tty-pt/hyle"

[workspace.dependencies]
dioxus             = "0.7.7"
dioxus-ssr         = "0.7.7"
dioxus-core        = "0.7.7"
dioxus-hooks       = "0.7.7"
dioxus-signals     = "0.7.7"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
url                = "2.5"
indexmap           = { version = "2", features = ["serde"] }
hyle               = { path = "external/hyle/crates/hyle" }
hyle-dioxus        = { path = "external/hyle/crates/hyle-dioxus" }
hyle-dioxus-native = { path = "external/hyle/crates/hyle-dioxus-native" }
qmap               = { package = "qmap-rs", version = "0.1" }
ndx                = "0.1.1"
thiserror          = "2"

[patch.crates-io]
qmap-rs            = { path = "external/libqmap/rust-bindings" }

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
