[package]
name = "ndc_dioxus"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
dioxus            = { workspace = true }
dioxus-ssr        = { workspace = true }
indexmap          = { workspace = true }
ndc_dioxus_shared = { path = "ndc_dioxus_shared" }
ndc_song_shared   = { path = "../song/ndc_song_shared" }
ndx               = "0.1"
serde             = { workspace = true }
serde_json        = { workspace = true }
url               = { workspace = true }
hyle              = { workspace = true }
hyle-dioxus        = { workspace = true }
hyle-dioxus-native = { workspace = true }
qmap               = { workspace = true }

