[package]
name = "ndc_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.97"
wasm-bindgen = "0.2.120"
wasm-bindgen-futures = "0.4.70"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3.97"
features = [
    "CssStyleDeclaration",
    "Document",
    "DomParser",
    "Element",
    "Event",
    "EventTarget",
    "FormData",
    "History",
    "HtmlButtonElement",
    "HtmlDataListElement",
    "HtmlElement",
    "HtmlFormElement",
    "HtmlInputElement",
    "HtmlOptionElement",
    "HtmlSelectElement",
    "Location",
    "Node",
    "NodeList",
    "RequestInit",
    "Response",
    "SupportedType",
    "Url",
    "UrlSearchParams",
    "Window",
]
