[package]
name = "poem_ssr"
version = "0.1.0"
edition = "2024"
autobins = false

[lib]
path = "src/main.rs"

[dependencies]
dioxus            = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
ndc_dioxus_shared = { path = "../../ssr/ndc_dioxus_shared" }
