[package]
name = "ndc_song_client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "=0.3.72"
wasm-bindgen = "=0.2.95"
wasm-bindgen-futures = "=0.4.45"

[dependencies.web-sys]
version = "=0.3.72"
features = [
    "CssStyleDeclaration",
    "Document",
    "DomParser",
    "Element",
    "Event",
    "EventTarget",
    "History",
    "HtmlButtonElement",
    "HtmlElement",
    "HtmlFormElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "Location",
    "Node",
    "RequestInit",
    "Response",
    "SupportedType",
    "Url",
    "UrlSearchParams",
    "Window",
]
