[package]
name = "ndc_song_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
dioxus = { version = "0.7.7", features = ["web", "fullstack"] }
dioxus-web = "0.7.7"
wasm-bindgen = "0.2"
ndc_song_shared = { path = "../ndc_song_shared" }

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlElement",
    "HtmlFormElement",
    "HtmlSelectElement",
    "HtmlInputElement",
    "HtmlButtonElement",
    "HtmlDataListElement",
    "HtmlOptionElement",
    "Element",
    "Node",
    "NodeList",
    "Event",
    "EventTarget",
    "FormData",
    "RequestInit",
    "Response",
    "UrlSearchParams",
    "CssStyleDeclaration",
    "History",
    "Location",
]
