[package]
name = "ndc_songbook_client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.97"
wasm-bindgen = "0.2.120"
wasm-bindgen-futures = "0.4.70"

[dependencies.web-sys]
version = "0.3.97"
features = [
    "CssStyleDeclaration",
    "Document",
    "Element",
    "Event",
    "FormData",
    "HtmlButtonElement",
    "HtmlDataListElement",
    "HtmlElement",
    "HtmlFormElement",
    "HtmlInputElement",
    "HtmlOptionElement",
    "HtmlSelectElement",
    "Node",
    "NodeList",
    "RequestInit",
    "Response",
    "UrlSearchParams",
    "Window",
]
