[package]
name = "ndc_dioxus_shared"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus             = { workspace = true }
dioxus-ssr         = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
url                = { workspace = true }
indexmap           = { workspace = true }
hyle               = { workspace = true }
hyle-dioxus        = { workspace = true }
hyle-dioxus-native = { workspace = true }
