[package]
name = "ndc_dioxus_shared"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus             = { workspace = true }
dioxus-ssr         = { workspace = true }
dioxus-fullstack-core = { version = "0.7.7", features = ["server"] }

url                = { workspace = true }
ndc_types          = { path = "../../ndc-types" }
