[package]
name = "ndc_dioxus"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
base64 = "0.22"
dioxus = "0.7.6"
dioxus-ssr = "0.7.6"
ndc_dioxus_shared = { path = "../ndc_dioxus_shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5"

[build-dependencies]
cbindgen = "0.28"
song_ssr    = { path = "../../song/ssr" }
poem_ssr    = { path = "../../poem/ssr" }
choir_ssr   = { path = "../../choir/ssr" }
songbook_ssr = { path = "../../songbook/ssr" }
