[package]
name = "ndc_dioxus"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
dioxus            = { workspace = true }
dioxus-ssr        = { workspace = true }
ndc_dioxus_shared = { path = "../ndc_dioxus_shared" }
serde             = { workspace = true }
serde_json        = { workspace = true }
url               = { workspace = true }

[build-dependencies]
cbindgen     = "0.28"
song_ssr     = { path = "../../song/ssr" }
poem_ssr     = { path = "../../poem/ssr" }
choir_ssr    = { path = "../../choir/ssr" }
songbook_ssr = { path = "../../songbook/ssr" }
